<resources>
    <string name="app_name">Android Github Actions</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fragment1_desc">The purpose of this app is to test auto Github Actions. In order to test this properly, this app will contain some things that can best automatically tested.</string>
    <string name="error_text_contains_capital_letters">text contains capital letters</string>
</resources>